# courtside-backend

./: .dockerignore  .env.example  .gitignore  BACKEND.md  Dockerfile  Dockerfile.ml  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  ml-pipeline.yml
alembic/: env.py
alembic/versions/: 20260521_0000_initial.py  20260701_0001_predictions.py
ml/: README.md  __init__.py  config.py  pipeline.py
ml/feature_store/: feature_group.py  ingest.py  training_query.sql
ml/serving/: deploy_endpoint.py  inference.py
ml/training/: evaluate.py  prepare_data.py  requirements.txt  train.py  train_script.py
scripts/: scrape_stats.py  seed.py
src/courtside/: anthropic_client.py  config.py  errors.py  main.py
src/courtside/auth/: deps.py  tokens.py
src/courtside/db/: models.py  session.py
src/courtside/ml/: __init__.py  baseline.py  client.py  features.py
src/courtside/routes/: __init__.py  archetype.py  auth.py  chat.py  games.py  me.py  projection.py  seasons.py  stats.py
src/courtside/schemas/: archetype.py  auth.py  chat.py  game.py  player.py  projection.py  season.py  stats.py
src/courtside/services/: archetype.py  chat.py  projection.py  stats.py
tests/: conftest.py  test_archetype.py  test_auth.py  test_chat.py  test_db.py  test_features.py  test_games.py  test_health.py  test_me.py  test_projection.py  test_seasons.py  test_stats.py
