[project]
name = "courtside-backend"
version = "0.1.0"
description = "Backend API for Courtside"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0.36",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "sqlalchemy-aurora-data-api>=0.5",
    "pyjwt>=2.9",
    "bcrypt>=4.2",
    "anthropic>=0.40",
    "boto3>=1.35",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
    "pyright>=1.1.385",
    "requests>=2.34.2",
    "beautifulsoup4>=4.14.3",
]
# Offline pipeline only (ml/). Deliberately excluded from the serving Lambda image,
# which needs boto3 alone to invoke the endpoint + read the feature store.
ml = [
    "sagemaker>=2.230",
    "mlflow>=2.16",
    "xgboost>=2.1",
    "scikit-learn>=1.5",
    "pandas>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/courtside"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "standard"
pythonVersion = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
